--- a/.editorconfig
+++ b/.editorconfig
@@ -5,12 +5,13 @@ root = true
 
 # Unix-style newlines with a newline ending every file
 [*]
+charset = utf-8
 end_of_line = lf
 insert_final_newline = true
+trim_trailing_whitespace = true
 
 # Matches multiple files with brace expansion notation
 # Set default charset
-[*.{js}]
-charset = utf-8
-indent_style = tab
+[{*.js,*.jsx,*.ts,*.tsx}]
+indent_style = space
 indent_size = 2
