--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "@types/node": "^22.5.4",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@types/uuid": "^10.0.0",
     "@types/react-test-renderer": "^18.0.7",
+    "@types/uuid": "^10.0.0",
     "@types/webpack-env": "^1.18.4",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
@@ -71,6 +71,8 @@
     "prettier-eslint": "^16.3.0",
     "prettier-eslint-cli": "^8.0.1",
     "react-test-renderer": "^18.3.1",
+    "sass": "^1.78.0",
+    "sass-loader": "^16.0.1",
     "storybook": "^7.6.10",
     "storybook-addon-react-router-v6": "^2.0.10",
     "style-loader": "^4.0.0",
