--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@zlden/react-developer-burger-ui-components": "^1.15.0",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.4.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
-    "redux-thunk": "^3.1.0",
-    "typescript": "^5.6.2",
+    "typescript": "^5.6.0",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4",
     "webpack": "^5.94.0",
@@ -30,21 +30,30 @@
     "@storybook/addon-links": "^7.6.10",
     "@storybook/addon-onboarding": "^1.0.11",
     "@storybook/blocks": "^7.6.10",
+    "@storybook/channels": "^7.0.0",
+    "@storybook/components": "^7.0.0",
+    "@storybook/core-events": "^7.0.0",
+    "@storybook/manager-api": "^7.0.0",
+    "@storybook/preview-api": "^7.0.0",
     "@storybook/react": "^7.6.10",
     "@storybook/react-webpack5": "^7.6.10",
     "@storybook/test": "^7.6.10",
+    "@storybook/theming": "^7.0.0",
+    "@testing-library/dom": "^10.0.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.13",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.5.4",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-test-renderer": "^18.0.7",
     "@types/uuid": "^10.0.0",
     "@types/webpack-env": "^1.18.4",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
+    "@typescript-eslint/eslint-plugin": "^8.5.0",
+    "@typescript-eslint/parser": "^8.5.0",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
