feat: add test to add ingredient

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,11 @@
     "isolatedModules": true,
     "noEmit": false,
     "jsx": "react-jsx",
-    "types": ["node", "jest"],
+    "types": [
+      "node",
+      "jest",
+      "cypress"
+    ],
     "baseUrl": ".",
     "paths": {
       "@api": ["src/utils/burger-api.ts"],
