--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": false,
+//    "noEmit": true,
     "jsx": "react-jsx",
     "types": [
       "node",
@@ -32,5 +32,8 @@
       "@utils-types": ["src/utils/types"]
     }
   },
-  "include": ["src"]
+  "include": [
+    "../node_modules/cypress",
+    "./**/*.ts"
+  ]
 }
