fix: many small fixes

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,25 @@ node_modules
 dist
 yarn.lock
 /cypress/screenshots/
+/cypress/downloads/
+/coverage/lcov-report/services/api/burgersApi.ts.html
+/coverage/lcov-report/services/api/index.html
+/coverage/lcov-report/services/slices/burgerSlice.ts.html
+/coverage/lcov-report/services/slices/index.html
+/coverage/lcov-report/services/slices/orderSlice.ts.html
+/coverage/lcov-report/services/slices/userSlice.ts.html
+/coverage/lcov-report/services/utils/index.html
+/coverage/lcov-report/services/utils/reAuth.ts.html
+/coverage/lcov-report/services/index.html
+/coverage/lcov-report/services/store.ts.html
+/coverage/lcov-report/base.css
+/coverage/lcov-report/block-navigation.js
+/coverage/lcov-report/favicon.png
+/coverage/lcov-report/index.html
+/coverage/lcov-report/prettify.css
+/coverage/lcov-report/prettify.js
+/coverage/lcov-report/sort-arrow-sprite.png
+/coverage/lcov-report/sorter.js
+/coverage/clover.xml
+/coverage/coverage-final.json
+/coverage/lcov.info
